[issue-413] Update Java 11 and Hadoop 3.3 and latest Pravega
Signed-off-by: Brian Zhou <b.zhou@dell.com>